fix services card align

--- a/static/assets/css/service.css
+++ b/static/assets/css/service.css
@@ -17,7 +17,7 @@
   padding-right: 3em;
   color: white;
   position: absolute;
-  top: 2%;
+  /*top: 2%;*/
 }
 
 
@@ -111,7 +111,7 @@
   border: 1px solid #eaeaea;
   border-radius: 8px;
   padding: 1em;
-  margin: 1em 0;
+  /*margin: 1em 0;*/
   border-left: 8px solid #24054e;
 }
 .nav-tabs li {
